[package]
name = "tonjo-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
tonjo-sns-client = { git = "ssh://git@github.com/tonjo-sns/tonjo-sns-client", rev = "5d135109", features = ["wasm-bindgen"] }
base64 = "0.13.0"
web-sys = "0.3.55"
